# hyssop

./: CMakeLists.txt  README.md
include/: util.h
include/hyssop/: util.h
src/: CMakeLists.txt  get-started.cc
tests/: CMakeLists.txt  basic-test.cc
tests/01-dense-matrix/: 01-the-matrix-class.cc  02-matrix-arithmetic.cc  03-the-array-class.cc  04-block-operations.cc  05-slicing-and-indexing.cc  06-advanced-initialization.cc  CMakeLists.txt
